--- a/src/web/scss/components/menu.scss
+++ b/src/web/scss/components/menu.scss
@@ -1,6 +1,6 @@
 .menu {
 
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
@@ -20,12 +20,21 @@
     opacity: 0;
   }
 
+  &__content {
+
+    height: 100%;
+  }
+
   &__list {
 
-    list-style: none;
     display: flex;
+    height: 100%;
     flex-direction: column;
     align-items: center;
+    padding-bottom: rem(32);
+    overflow-y: auto;
+    scroll-behavior: smooth;
+    list-style: none;
   }
 
   &__item {
