--- a/src/web/scss/components/section.scss
+++ b/src/web/scss/components/section.scss
@@ -13,5 +13,6 @@ section {
   &--card {
 
     min-width: rem(500);
+    padding-top: rem(64);
   }
 }
